--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   "dependencies": {
     "ejs": "^3.1.7",
     "express": "^4.18.1",
-    "mysql": "^2.18.1",
-    "serve": "^13.0.2"
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
